--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			<div class="wrapper" style="overflow-y: scroll;">
 				<div class="main">
 					<h1>
-						汇盟官网下载中心
+						美丽家园官网下载中心
 					</h1>
 					<div class="content">
 						<div class="content-top">
