--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 									
                                     <br>
                                     
-									下载线路三
+									主线路下载线路三
 									<a href="http://www.baidu.com" target="_blank">
 										<i>
 											<strong>点击进入</strong>
