--- a/tz.html
+++ b/tz.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0.1;url=https://www.mldjl.com">
+<meta http-equiv="refresh" content="0.1;url=https://www.mldjl.com/">
