--- a/tz.html
+++ b/tz.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8" />
     <title>跳转</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="refresh" content="5;URL=https://www.mlhyvp06.icu/">
+    <meta http-equiv="refresh" content="5;URL=http://www.mlhyvp09.icu/">
     <style>
         body{
             margin:0;
