--- a/tz.html
+++ b/tz.html
@@ -1,25 +1,1 @@
-<!DOCTYPE html>
-<head>
-    <meta charset="utf-8" />
-    <title>跳转</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="refresh" content="5;URL=https://jiayuan2023.github.io/ml/h51">
-    <style>
-        body{
-            margin:0;
-            padding:0;
-        }
-        div.bg{
-            width: 100%;
-            height:100vh;
-            background:url("./pic.jpg") no-repeat;
-            background-size:100% 100%;
-    
-        }
-    </style>
-</head>
-<body>
-    <div class="main">
-        <div class="bg"></div>
-    </div>
-</body>
+<meta http-equiv="refresh" content="0; url=https://jiayuan2023.github.io/ml/h52">
