--- a/tz.html
+++ b/tz.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://jiayuan2023.github.io/ml/h52">
+<meta http-equiv="refresh" content="0; url=https://www.3204815.cn/">
